# senseye-cameras

./: .fossa.yml  .gitignore  LICENSE  LICENSE_3RD_PARTY  README.md  appveyor.yml  bitbucket-pipelines.yml  pyproject.toml  setup.py
docs/source/: intro.rst
examples/: emergent_preview.py  emergent_to_raw.py  emergent_to_raw_process.py  extract_baked_data.py  portaudio_to_wav.py  pylon_to_mkv.py  usb_to_avi.py
examples/resources/: config.py
examples/stream/: ffmpeg_to_ffmpeg.py  frame_interceptors.py  pylon_stream.py  pyueye_stream.py  pyueye_to_raw.py  usb_to_file.py  usb_to_pipe.py
senseye_cameras/: __init__.py  audio_recorder.py  camera_handler.py  camera_reader.py  camera_viewer.py  camera_writer.py  loop_thread.py  safe_queue.py  stream.py  utils.py
senseye_cameras/audio/: audio.py  webcam_audio.py
senseye_cameras/cameras/: camera.py  camera_factory.py  pylon_camera.py  raw_video_camera.py  usb_camera.py  utils.py
senseye_cameras/configs/: acA800-510um_22822689.pfs
senseye_cameras/input/: audio_ffmpeg_input.py  audio_port_input.py  camera_emergent.py  camera_ffmpeg.py  camera_pylon.py  camera_raw_video.py  camera_ueye.py  (+3 more)
tests/: audio_recorder_test.py  camera_factory_test.py  camera_ffmpeg_test.py  camera_handler_test.py  camera_pylon_test.py  camera_raw_video_test.py  camera_reader_test.py  camera_ueye_test.py  camera_usb_test.py  extensions_test.py  extract_baked_data.py  factory_test.py  ffmpeg_camera_test.py  output_test.py  pylon_camera_test.py  stream_extensions_test.py  stream_test.py  usb_camera_test.py  utils.py  webcam_audio_test.py
(+18 files in other folders)
