[project]
name = "senseye-cameras"
version = "1.0.9"
description = "Senseye Camera Utilities"
authors = [
    "Senseye, Inc. <engineeringadmin@senseye.co>"
]
license = "BSD-3-Clause"
readme = "README.md"
python = "^3.6"
repository = "https://github.com/senseye-inc/senseye-cameras"
documentation = "https://senseye-cameras.readthedocs.io/en/latest/"

[dependencies]
numpy = "^1.14.5"
opencv-python-headless = "^4.4.0.46"
ffmpeg-python = "^0.2.0"
senseye-pyueye = "^0.2.0"

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
# exclude = '''
